--- a/CG.html
+++ b/CG.html
@@ -33,10 +33,10 @@
 		        </div>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#">CV</a>
+		        <a class="nav-link" href="images/Lazareva_UX_UI.pdf">CV</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#">About</a>
+		        <a class="nav-link" href="about.html">About</a>
 		      </li>
 		     
 		    </ul>
