--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
                              blah blah blah
                              <br>
                              <br>
-                             <a href="about.html#navbarDropdownMenuLink"> maybe you wanna see my projects one more time?</a>
+                             <a href="CG.html"> maybe you wanna see my CG works one more time?</a>
                         </p> 
                         
                     </div>
