--- a/about.html
+++ b/about.html
@@ -47,31 +47,28 @@
 
 	<main>
 
-		<div id="intro">
-            <div class="container space">
-                <div class="row">
-                    <div class="col-sm-10">
-                        <h1 style="text-align: left;">Hellooo again!</h1>
-                        <h3>I've no idea what to write here lol</h3>
+		<div class="container">
+  			<div class="row">
+    			<div class="col col-12 col-lg-8">
+                        <h1 style="text-align: left; margin-bottom: 50px !important;">Hellooo again!</h1>
+                        <h3 style="font-weight: 600;">I'm gonna keep it short</h3>
                         <p class="lead" style="margin-bottom:16px; margin-top: 13px;">
-                            blah blah blah
+                            My name is Olga Lazareva and I'm passionate about design, learning new things everyday and meeting the ones who don't afraid of sharing ideas with the world. 
                             <br>
-                             blah blah blah
                             <br>
-                             blah blah blah
+                            I'm a self taught designer and have learnt a lot of the processes, concepts and theories of UX/UI and product design.
                             <br>
-                             blah blah blah
                             <br>
-                             blah blah blah
+                             Along with design I love photography, creating CG art and getting inspiration while surfing, snowboarding, kitesurfing and skateboarding.
                              <br>
                              <br>
-                             <a href="CG.html"> maybe you wanna see my CG works one more time?</a>
+                             <br>
+                            Detailed info about education and work experience you can find in my<a a href="images/Lazareva_UX_UI.pdf" target="_blank" style="font-weight: 900;"> CV</a>.
                         </p> 
                         
                     </div>
                 </div>
             </div>
-        </div>
 		
 	</main>
 	
