--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                         <h1 style="text-align: left; margin-bottom: 50px !important;">Hellooo again!</h1>
                         <h3 style="font-weight: 600;">I'm gonna keep it short</h3>
                         <p class="lead" style="margin-bottom:16px; margin-top: 13px;">
-                            My name is Olga Lazareva and I'm passionate about design, learning new things everyday and meeting the ones who're afraid of sharing ideas with the world. 
+                            My name is Olga Lazareva and I'm passionate about design, learning new things and meeting the ones who are not afraid of sharing ideas with the world. 
                             <br>
                             <br>
                             I'm a self-taught designer and have learnt a lot of the processes, concepts and theories of UX/UI and product design.
