--- a/index.html
+++ b/index.html
@@ -49,13 +49,12 @@
 		<div class="container">
   			<div class="row">
     			<div class="col col-12 col-lg-4">
-   					<h1 style="text-align: left;">Hi there!&#160;&#128075;
+   					<h1 style="text-align: left; margin-bottom: 20px">Hi there!&#160;&#128075;
                     <br>
                     	I'm Olga Lazareva,</h1>
-                     <p style="margin-bottom:16px; margin-top: 13px;">a designer, photographer and CG artist.
+                     <p style="margin-bottom:50px">a designer, photographer and CG artist.
                     	<br>
 			<br>
-			
                     	Welcome to my page!
                      </p>
 			<br>
